crates/jsonschema-codegen/tests/ui/invalid_pattern_options_key.rs
#[jsonschema::validator(
    schema = r#"{"type":"string"}"#,
    pattern_options = {
        engine = fancy_regex,
        unknown = 1,
    }
)]
struct Validator;

fn main() {}
